--- a/3f71b36de2f14574b44bf1d072c8b19b.opf/meta.yml
+++ b/3f71b36de2f14574b44bf1d072c8b19b.opf/meta.yml
@@ -5,6 +5,6 @@ source_metadata:
     92f4f86c23944489b507bef51be1d903:
       base_file: v034.txt
       image_group_id: I1PD95879
-      title: ''
+      title: ལས་ཀྱི་སྒྲིབ་པ་ཐམས་ཅད་རྣམ་པར་འཇོམས་པ་ཞེས་བྱ་བའི་དཀྱིལ་འཁོར་གྱི་ཆོ་ག།
       total_pages: 1734
       volume_number: 34
