--- a/D4436CFEF.opf/index.yml
+++ b/D4436CFEF.opf/index.yml
@@ -4,8 +4,8 @@ revision: '00001'
 annotations:
   00051a1bd4474b639488907593def3b7:
     parts: {}
+    work_id: D2655
     span:
-    - vol: 34
+    - base: aa93
       start: 0
       end: 4944
-    work_id: D2655
